# housing-scout

./: .env.example  .gitignore  CHANGELOG.md  README.md  config.yaml  profile.example.yaml  pyproject.toml  run_daily.py  run_listener.py  run_setup.py
agent_instructions/: chat_agent.es.md  chat_agent.md  property_analyst.es.md  property_analyst.md
docs/: README.md
docs/engineering/: ARCHITECTURE.md  FEATURES.md
docs/planning/: 2026-07-13-genericize-and-personalize-plan.md  NEXT_MOVE.md  ROADMAP.md
docs/product/: PRD.md
docs/prompts/: agent_skill_prompt.md  analyst_prompt.md  project_instructions.md
docs/specs/: 2026-07-07-brightdata-scraper-design.md  2026-07-13-genericize-and-personalize-design.md
scout/: __main__.py
scout/core/: config.py  db.py  logging_setup.py  migrations.py  models.py  orchestrate.py  profile.py  registry.py  runlock.py  setup_wizard.py  utils.py
scout/providers/: __init__.py
scripts/: com.housing-scout.daily.plist.template  com.housing-scout.listener.plist.template  install_launchd.sh  install_listener.sh  manual_scrape.py
tests/analyse/: test_property_analyst.py
tests/core/: test_config.py  test_db.py  test_logging_setup.py  test_models.py  test_orchestrate.py  test_profile.py  test_prompt_builder.py  test_registry.py  test_run_daily.py  test_runlock.py  test_setup_wizard.py
tests/enrich/: test_base.py  test_osm.py  test_osrm.py
tests/filter/: test_dedup.py  test_hard_excl.py  test_persist.py
tests/notify/: test_chat_agent.py  test_listener.py  test_telegram_notify.py
tests/report/: test_markdown.py
(+42 files in other folders)
