[project]
name = "housing-scout"
version = "3.0.0"
description = "Property scouting agent template: scrapes real-estate portals, enriches, scores and reports listings matching a personal profile"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "beautifulsoup4>=4.12",
    "tenacity>=8.2",
    "python-dotenv>=1.0",
    "geopy>=2.4",
    "feedparser>=6.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["scout*"]
